--- a/styles.css
+++ b/styles.css
@@ -12,11 +12,29 @@ h2 {
     text-align: center;
 }
 
+input
+{
+    border-color: black;
+    border-radius: 100px;
+    border-width: 2px;
+}
+
+button
+{
+    margin: 10px;
+    background-color: wheat ;
+    width: 100px;
+    height: 30px;
+    border-color: saddlebrown;
+    border-width: 1px;
+    border-radius: 8px;
+}
+
 .generator-box
 {
+    background-color: #f9f9f9;
     max-width: 400px;
     margin: auto;
-    margin-bottom: 25px;
     padding: 1rem;
     border: 1px solid black;
     border-radius: 8px;
@@ -35,7 +53,7 @@ h2 {
 #headerFieldset>legend
 {
     font-weight: bold;
-    margin: 0 auto;
+    margin: 0 auto 0;
     text-align: center;
     display: block;
 }
@@ -50,7 +68,7 @@ h2 {
     width: 900px;
     border: 1px solid black;
     padding: 1rem;
-    margin: 1rem auto;
+    margin: 32px auto;
     border-radius: 8px;
     background-color: #f9f9f9;
     text-align: justify;
