--- a/styles.css
+++ b/styles.css
@@ -1,138 +1,109 @@
-h1
-{
-    font-size: 50px;
+h1 {
+    font-size: clamp(2rem, 5vw, 3.125rem); /* ~50px */
     color: purple;
     -webkit-text-stroke: 1px black;
     text-align: center;
 }
 
-h1+p
-{
+h1 + p {
     text-align: center;
 }
 
 h2 {
-    font-size: 40px;
+    font-size: clamp(1.75rem, 4vw, 2.5rem); /* ~40px */
     text-align: center;
     color: darkorchid;
     -webkit-text-stroke: 1px black;
 }
 
-#disclaimer
-{
-    font-size: 17px;
-    margin-top: -25px;
+#disclaimer {
+    font-size: 1.0625rem; /* 17px */
+    margin-top: -1.5rem;
 }
 
-input
-{
-    font-size: 20px;
-    width: 570px;
-    height: 25px;
+input {
+    font-size: 1.25rem; /* 20px */
+    width: 90%;
+    max-width: 570px;
+    height: 2rem;
     border-color: #bdbdbd;
     border-radius: 100px;
     border-width: 2px;
-    margin-bottom: 10px;
-    margin-top: 5px;
-    padding-left: 13px;
+    margin-bottom: 0.625rem;
+    margin-top: 0.3125rem;
+    padding-left: 0.8125rem;
 }
 
-#age
-{
+#age {
     width: 52px;
 }
 
-label
-{   
-    margin-top: 5px;
-    margin-bottom: 5px;
+label {
+    margin-top: 0.3125rem;
+    margin-bottom: 0.3125rem;
     display: block;
 }
 
-.inline-block-label
-{
+.inline-block-label,
+.inline-block-label-alt {
     display: inline-block;
-    margin-top: 5px;
-    margin-bottom: 5px;
 }
 
-.inline-block-label-alt
-{
-    display: inline-block;
-    margin-top: 10px;
-    margin-bottom: 10px;
+.inline-block-label {
+    margin-top: 0.3125rem;
+    margin-bottom: 0.3125rem;
 }
 
-#randomifblank
-{
+.inline-block-label-alt {
+    margin-top: 0.625rem;
+    margin-bottom: 0.625rem;
+}
+
+#randomifblank,
+#random-everything {
     width: 100px;
-    margin-left: -40px;
-    margin-right: -40px;
-    height: 17px;
+    margin-left: -2.5rem;
+    margin-right: -2.5rem;
+    height: 1.0625rem;
 }
 
-#random-everything
-{
-    width: 100px;
-    margin-left: -40px;
-    margin-right: -40px;
-    height: 17px;
-}
-
-#yes-married
-{
+#yes-married,
+#no-married {
     width: 50px;
-    height: 17px;
+    height: 1.0625rem;
 }
 
-#no-married
-{
-    width: 50px;
-    height: 17px;
-}
-
-#radio-yes
-{
+#radio-yes {
     color: green;
-    margin-right: -20px;
+    margin-right: -1.25rem;
 }
 
-#radio-no
-{
+#radio-no {
     color: red;
-    margin-left: -10px;
-    margin-right: -20px;
+    margin-left: -0.625rem;
+    margin-right: -1.25rem;
     text-align: center;
 }
 
-#timeGetHome
-{
+#timeGetHome,
+#timeToSleep {
     width: 79px;
-    margin-left: 0px;
-    font-size: 18px;
+    margin-left: 0;
+    font-size: 1.125rem; /* 18px */
     text-align: center;
 }
 
-#timeToSleep
-{
-    width: 79px;
-    margin-left: 0px;
-    font-size: 18px;
-}
-
-.pNormal
-{
-    font-size: 19px;
+.pNormal {
+    font-size: 1.1875rem; /* 19px */
     margin-top: 0;
 }
 
-button
-{
-    font-size: 20px;
-    margin: 10px;
-    margin-left: 30px;
-    margin-right: 30px;
-    background-color: wheat ;
+button {
+    font-size: 1.25rem; /* 20px */
+    margin: 0.625rem;
+    margin-left: 1.875rem;
+    margin-right: 1.875rem;
+    background-color: wheat;
     width: 100px;
     height: 50px;
     border-color: saddlebrown;
@@ -140,23 +111,22 @@ button
     border-radius: 8px;
 }
 
-.generator-box
-{
+.generator-box {
     text-align: justify;
-    font-size: 20px;
+    font-size: 1.25rem; /* 20px */
     font-family: "Lucida Console", monospace;
     background-color: #f9f9f9;
     max-width: 600px;
     margin: auto;
-    padding: 30px;
-    padding-top: 45px;
+    padding: 1.875rem; /* 30px */
+    padding-top: 2.8125rem; /* 45px */
     border: 1px solid black;
     border-radius: 8px;
 }
 
-#headerFieldset
-{
-    width: 1160px;
+#headerFieldset {
+    width: 95%;
+    max-width: 1160px;
     border: 1px solid black;
     padding: 1rem;
     margin: auto;
@@ -164,72 +134,66 @@ button
     background-color: #f9f9f9;
 }
 
-#headerFieldset>legend
-{
-    font-weight: bold;
-    margin: 0 auto 0;
-    text-align: center;
-    display: block;
-}
-
-#headerFieldset>legend+p
-{
-    text-align: center;
-}
-
-legend
-{
-    font-size: 30px;
-}
-
-.paraResult
-{
-    font-size: 21px;
-}
-
-.paragraphFieldset
-{
-    width: 960px;
-    border: 1px solid black;
-    padding: 1rem;
-    padding-left: 25px;
-    padding-right: 25px;
-    margin: 32px auto;
-    border-radius: 8px;
-    background-color: #f9f9f9;
-    text-align: justify;
-}
-
-.paragraphLegend 
-{
+#headerFieldset > legend {
     font-weight: bold;
     margin: 0 auto;
     text-align: center;
     display: block;
 }
 
-.figure-row 
-{
+#headerFieldset > legend + p {
+    text-align: center;
+}
+
+legend {
+    font-size: clamp(1.5rem, 4vw, 2rem); /* ~30px */
+}
+
+.paraResult {
+    font-size: 1.3125rem; /* 21px */
+}
+
+.paragraphFieldset {
+    width: 95%;
+    max-width: 960px;
+    border: 1px solid black;
+    padding: 1rem;
+    padding-left: 1.5625rem;
+    padding-right: 1.5625rem;
+    margin: 2rem auto;
+    border-radius: 8px;
+    background-color: #f9f9f9;
+    text-align: justify;
+}
+
+.paragraphLegend {
+    font-weight: bold;
+    margin: 0 auto;
+    text-align: center;
+    display: block;
+}
+
+.figure-row {
     display: flex;
     gap: 1rem;
     justify-content: center;
+    flex-wrap: wrap;
 }
 
-.yoshikagekiraimg
-{
-    width: 400px;
+.yoshikagekiraimg {
+    width: 100%;
+    max-width: 400px;
     height: auto;
-    margin-top: 50px;
-    margin-bottom: 20px;
+    margin-top: 3.125rem; /* 50px */
+    margin-bottom: 1.25rem; /* 20px */
 }
 
-.button-div
-{
+.button-div {
     display: flex;
     justify-content: center;
+    flex-wrap: wrap;
 }
 
-footer
-{
+footer {
     text-align: center;
 }
