--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,7 @@ body {
 h1 {
     font-size: clamp(2rem, 5vw, 3.125rem);
     /* ~50px */
+    text-align: center;
     color: purple;
     -webkit-text-stroke: 2px black;
 }
@@ -128,7 +129,7 @@ input:hover {
 }
 
 button:hover {
-    background-color: #9b934d;
+    background-color: rgb(209, 187, 145);
 }
 
 .generator-box {
