--- a/styles.css
+++ b/styles.css
@@ -128,6 +128,10 @@ input:hover {
     background-color: #e0e0e0;
 }
 
+input:disabled:hover {
+    background-color: white;
+}
+
 button:hover {
     background-color: rgb(209, 187, 145);
 }
