--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,8 @@
+@font-face {
+    font-family: 'jjba';
+    src: url('./fonts/ARIALNBI.TTF');
+}
+
 body {
     background-color: lightblue;
     margin: 0;
@@ -8,8 +13,9 @@ h1 {
     font-size: clamp(2rem, 5vw, 3.125rem);
     /* ~50px */
     text-align: center;
-    color: purple;
-    -webkit-text-stroke: 2px black;
+    color: gold;
+    -webkit-text-stroke: 1px black;
+    font-family: 'jjba';
 }
 
 h1+p {
@@ -21,7 +27,8 @@ h2 {
     /* ~40px */
     text-align: center;
     color: darkorchid;
-    -webkit-text-stroke: 2px black;
+    -webkit-text-stroke: 1px black;
+    font-family: 'jjba';
 }
 
 #disclaimer {
